--- a/product.html
+++ b/product.html
@@ -42,10 +42,10 @@
     </header>
     <main>
         <div class="container">
+            <button class="black-p50" onclick="history.go(-1)" id="goBack">GO BACK</button>
+        </div>
+        <div class="container">
             <section class="product-details">
-                <a href="headphones.html">
-                    <p class="black-p50" id="goBack">GO BACK</p>
-                </a>
                 <img src="img/Headphones/big-imgs/XX99-II.png" alt="XX99">
                 <div class="text-div">
                     <span>NEW PRODUCT</span>
