--- a/product3.html
+++ b/product3.html
@@ -42,10 +42,10 @@
     </header>
     <main>
         <div class="container">
+            <button class="black-p50" onclick="history.go(-1)" id="goBack">GO BACK</button>
+        </div>
+        <div class="container">
             <section class="product-details">
-                <a href="headphones.html">
-                    <p class="black-p50" id="goBack">GO BACK</p>
-                </a>
                 <img src="img/Headphones/big-imgs/XX59.png" alt="XX59">
                 <div class="text-div">
                     <h2 class="black-40px">
