--- a/product4.html
+++ b/product4.html
@@ -42,10 +42,10 @@
     </header>
     <main>
         <div class="container">
+            <button class="black-p50" onclick="history.go(-1)" id="goBack">GO BACK</button>
+        </div>
+        <div class="container">
             <section class="product-details">
-                <a href="headphones.html">
-                    <p class="black-p50" id="goBack">GO BACK</p>
-                </a>
                 <img src="img/Speakers/big-imgs/ZX9.png" alt="ZX9">
                 <div class="text-div">
                     <span>NEW PRODUCT</span>
