--- a/speakers.html
+++ b/speakers.html
@@ -49,6 +49,9 @@
             </div>
         </div>
         <div class="container">
+            <button class="black-p50" onclick="history.go(-1)" id="goBack">GO BACK</button>
+        </div>
+        <div class="container">
             <section class="product">
                 <div class="big-img">
                     <img src="img/Speakers/ZX9.png" alt="ZX9">
