--- a/headphones.html
+++ b/headphones.html
@@ -63,6 +63,9 @@
             </div>
         </div>
         <div class="container">
+            <button class="black-p50" onclick="history.go(-1)" id="goBack">GO BACK</button>
+        </div>
+        <div class="container">
             <section class="product">
                 <div class="big-img">
                     <img src="img/Headphones/big-imgs/XX99-II.png" alt="headphones">
